# dictum

./: README.md  pyproject.toml
dictum/: cli.py  main.py
dictum/cmd_builders/: __init__.py  exec_info.py  nerdctl.py
dictum/init/: __init__.py  kubernetes.py
dictum/selection/: find_containers.py  rephrase_selectors.py
