[tool.poetry]
name = "dictum"
version = "0.4.0"
description = "Run commands on pods as any user"
authors = ["GregRos <gregros@gregros.dev>"]
readme = "README.md"
packages = [{ include = "dictum" }]
[tool.poetry.dependencies]
python = "3.11.*"
termcolor = "^2.5.0"
typeguard = "2.13.*"
pyyaml = "^6.0.2"
kubernetes = "^32.0.0"
kr8s = "^0.20.4"

[tool.poetry.scripts]
dictum = "dictum.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.setuptools.package-data]
"*" = ["*.*"]
